split prepare_pdf func

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,7 +5,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script type="text/javascript" src="/eel.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Bootstrap demo</title>
+    <title>Comparison app</title>
 </head>
 <body style="background-color: #9ac8db;">
   {% block content %}
